--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "mouse-wheel": "^1.2.0",
     "mouse-change": "^1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "angle-normals": "^1.0.0",
+    "browserify": "^13.1.0",
+    "bunny": "^1.0.1",
+    "indexhtmlify": "^1.3.1",
+    "metadataify": "^1.0.1",
+    "regl": "^1.2.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "budo docs/example.js --live --open",
+    "build": "browserify docs/example.js | indexhtmlify | metadataify > docs/index.html"
   },
   "repository": {
     "type": "git",
