--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "gl-mat4": "^1.1.4",
     "mouse-wheel": "^1.2.0",
-    "mouse-change": "^1.3.0"
+    "tinytouch": "^1.1.0"
   },
   "devDependencies": {
     "angle-normals": "^1.0.0",
