--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^13.1.0",
     "bunny": "^1.0.1",
     "es2040": "^1.2.5",
+    "github-cornerify": "^1.0.7",
     "indexhtmlify": "^1.3.1",
     "metadataify": "^1.0.1",
     "regl": "^1.2.1",
@@ -22,7 +23,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "budo docs/example.js --live --open",
-    "build": "browserify docs/example.js -t es2040 | uglifyjs -c -m | indexhtmlify | metadataify > docs/index.html",
+    "build": "browserify docs/example.js -t es2040 | uglifyjs -c -m | indexhtmlify | metadataify | github-cornerify > docs/index.html",
     "lint": "standard",
     "lint-fix": "standard --fix"
   },
@@ -42,5 +43,9 @@
   "bugs": {
     "url": "https://github.com/mikolalysenko/regl-camera/issues"
   },
-  "homepage": "https://github.com/mikolalysenko/regl-camera#readme"
+  "homepage": "https://github.com/mikolalysenko/regl-camera#readme",
+  "github-corner": {
+    "fg": "#333",
+    "bg" : "#fff"
+  }
 }
